# prodtech-attributes

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  changelog.md  pyproject.toml
.github/: ci.yaml  pull_request_template.md
.github/workflows/: generate_markdown.yaml
attributes/: well_attributes.yaml
model/: well.py  well_model.py
tests/: test_well_attributes.py
utilities/: create_markdown_table.py  strip_yaml.py
